--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,11 +9,16 @@ on:
     branches: [main]
 
 jobs:
-  schellcheck:
-    name: bash
+  lint:
+    name: lint
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      - uses: ludeeus/action-shellcheck@2.0.0
+      - name: ShellCheck
+        uses: ludeeus/action-shellcheck@2.0.0
         env:
           SHELLCHECK_OPTS: -s bash
+        with:
+          additional_files: ".env.example"
+          check_together: "yes"
+          severity: style
